# 2catalogs

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  FORGE_ARCHITECTURE.md  FORGE_CHECKLIST.md  FORGE_EXAMPLES.md  FORGE_QUICKSTART.md  FORGE_SUMMARY.md  LICENSE  MANIFEST.in  README.md  SETUP_GUIDE.md  index.html  pyproject.toml  verify_installation.py
.github/: LABELS.md
.github/ISSUE_TEMPLATE/: config.yml  forge-all.yml  forge-intake.yml  forge-stac.yml
.github/scripts/: forge_parser.py
.github/workflows/: ci.yml  forge-catalog.yml  pages.yml  restart-failed-issues.yml  test-forge.yml  trigger-gitlab.yml
.gitlab/: README.md
.gitlab/issue_templates/: Bug_Report.md  Feature_Request.md  Forge_All.md  Forge_Intake.md  Forge_STAC.md
.gitlab/merge_request_templates/: default.md
.gitlab/scripts/: create_merge_request.py  forge_parser.py  setup_uv.sh
catalog/: main.yaml
docs/: COMMUNITY_CATALOG.md  FORGE.md  FORGE_EXAMPLES.md  FORGE_QUICKSTART.md  README.md  conf.py  index.html  index.rst
docs/catalog/: index.rst
docs/ci/: CI_ARCHITECTURE.md  CI_SPLIT_GUIDE.md  CI_SPLIT_SUMMARY.md  MERGE_REQUEST_WORKFLOW.md  index.rst
docs/forge/: FORGE_ARCHITECTURE.md  FORGE_CHECKLIST.md  FORGE_SUMMARY.md  index.rst
docs/forge/server/: CI_GITHUB.md  CI_GITLAB.md  index.rst
docs/forge/user/: FORGE.md  FORGE_ARCHITECTURE.md  index.rst
examples/: sample_catalog_v1.yaml
src/: __init__.py
src/generators/intake/v2/: __init__.py  tointake2.py
src/generators/stac/: __init__.py  xarray_dataset_to_stac_item.py
src/generators/stac/utils/: misc.py
src/tocatalogs/: __init__.py
src/tocatalogs/intake/: __init__.py  v2.py
src/tocatalogs/stac/: __init__.py  create_collection.py  create_with_eeriecloud.py
src/tocatalogs/stac/utils/: api_interaction.py  defaults.py  misc.py
tests/: test_forge.py  verify_installation.py
